@@ -50,6 +50,11 @@
         <!-- Alt-something interferes with normal typing on Mac: -->
         <accel platform="mac">Ctrl-Alt-C</accel>
       </object>
+      <object class="wxMenuItem" name="menu_clear">
+        <label>Clear translation</label>
+        <accel>Ctrl-K</accel>
+      </object>
+      <object class="separator"/>
       <object class="wxMenuItem" name="menu_references">
         <label>_Show references</label>
       </object>
