@@ -14,6 +14,7 @@ Version 1.5
 - fixed the Find window so that it can be closed using the Esc key (#187)
 - positions of translation fields are now remembered correctly when
   Poedit window is maximized (#194)
+- added Edit->Clear translation command (Marcin Floryan)
 
 
 Version 1.4.2
